k8s/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sga-frontend
  labels:
    app: sga-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sga-frontend
  template:
    metadata:
      labels:
        app: sga-frontend
    spec:
      containers:
        - name: sga-frontend
          # Replace image with your built frontend image (see Dockerfile.frontend)
          image: tu-registry/sga-frontend:1.0.0
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
